# programming-c

./: .gitignore  .mise.toml  pyproject.toml
.zed/: settings.json
1/: exercises.py  main.py
10/: ex_3-1.py  ex_3-2.py
11/: ex_3-1.py  ex_3-5.py  ex_3-6.py
12/: ex_3-1.py  ex_3-8.py
2/: exercises.py  main.py
3/: main.py
4/: exercises.py
5/: exercises.py
6/: exercises_3-1.py  exercises_3-5.py  main.py
7/: ex_3-1.py  ex_3-6.py
8/: ex_3-1.py  ex_3-3.py
9/: ex_3-1.py  ex_3-3.py
